[package]
name = "hyut"
version = "0.1.0"
description = "Hyut - A fast macOS memo app"
authors = ["ryunosuke.ito"]
edition = "2021"

[lib]
name = "hyut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"
